// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`__animate 1`] = `
<DocumentFragment>
  <div
    class="logo animate"
  >
    <div
      class="up"
    />
    <div
      class="down"
    />
  </div>
</DocumentFragment>
`;

exports[`__interactive 1`] = `
<DocumentFragment>
  <div
    class="logo"
  >
    <div
      class="up"
    />
    <div
      class="down"
    />
  </div>
</DocumentFragment>
`;
